--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -38,7 +38,7 @@
 
     <div class="col-lg-6 col-md-8 col-sm-12">
         <ul class="list-group" id="messages">
-            {% for msg in messages %}
+            {% for msg in likes %}
             <li class="list-group-item">
                 <a href="/messages/{{ msg.id  }}" class="message-link" />
                 <a href="/users/{{ msg.user.id }}">
@@ -49,14 +49,6 @@
                     <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
                     <p>{{ msg.text }}</p>
                 </div>
-                <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
-                    <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-                        <i class="fa fa-thumbs-up"></i>
-                    </button>
-                </form>
             </li>
             {% endfor %}
         </ul>
